# robot-context-labeler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
config/: config.yaml  prompt.yaml
docs/: gemini_api_cost.md  implementation_guideline.md
src/: __init__.py  config.py  gemini_client.py  gemini_vlm_quick_test.py  io_utils.py  parser.py  preprocess.py  runner.py  worker.py
src/tools/: list_models.py
